# 4sem-ADS

./: 1.cpp  1.py  14.cpp  15.py  17.cpp  18.cpp  19.cpp  2.cpp  3.cpp  3.py  4.cpp  9.cpp  CMakeLists.txt  CppNotes.h
