cmake_minimum_required(VERSION 3.19)
project(Tasks)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(Tasks
#        1.cpp
#        12.cpp
#        13.cpp
#        14.cpp
#        15.cpp
#        16.cpp
#        17.cpp     +
#        18.cpp
#        19.cpp
#        2.cpp      +
#        2_t.cpp
        3.cpp
#        3_t.cpp
#        4.cpp      +
#        4_t.cpp
#        5.cpp
#        6.cpp
#        7.cpp
#        8.cpp
#        9.cpp      +
#        CppNotes.h
        )
